frontend/tests/errors/ER-001/missing_arrow/test.vx
// @rfc: doc/vexel-rfc.md#errors--diagnostics
// @desc: Syntax errors are reported as compile-time errors | Syntax error: missing arrow in function signature


&^main() #i32 {
    0
}
